[gd_scene load_steps=13 format=4 uid="uid://dhvjjcdiq887h"]

[ext_resource type="Script" uid="uid://bhgby8js7o7vt" path="res://world.gd" id="1_036b0"]
[ext_resource type="PackedScene" uid="uid://cfs5gebf2shjq" path="res://player/player.tscn" id="1_tlwt5"]
[ext_resource type="Texture2D" uid="uid://3y283qld63o" path="res://world/graybox.png" id="3_aqk2v"]
[ext_resource type="Texture2D" uid="uid://brffxipxs6qo" path="res://world/tile_sets.png" id="3_tlwt5"]
[ext_resource type="FontFile" uid="uid://do8ny4v764gtp" path="res://assets/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf" id="4_aqk2v"]
[ext_resource type="PackedScene" uid="uid://c5vgcexdsp40b" path="res://world/coin.tscn" id="6_dwbse"]
[ext_resource type="PackedScene" uid="uid://boxlqsv7t834y" path="res://world/finish.tscn" id="7_pkg7o"]
[ext_resource type="AudioStream" uid="uid://bbbjymvnliobm" path="res://assets/soundtrack_one.mp3" id="8_gbfbk"]
[ext_resource type="AudioStream" uid="uid://ohhmsy06gq43" path="res://effects/jump_effect.mp3" id="9_ioo17"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_036b0"]
texture = ExtResource("3_aqk2v")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dwbse"]
texture = ExtResource("3_tlwt5")
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.539576, -8, 8, -8, 8, 8, 0.179859, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.539576, -8, 8, -8, 8, 8, 0.179859, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.539576, -8, 8, -8, 8, 8, 0.179859, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
4:4/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_pkg7o"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_036b0")
sources/1 = SubResource("TileSetAtlasSource_dwbse")

[node name="World" type="Node2D"]
process_mode = 3
position = Vector2(18, -506)
script = ExtResource("1_036b0")

[node name="Player" parent="." instance=ExtResource("1_tlwt5")]
position = Vector2(59, 358)
scale = Vector2(1.88559, 2.38627)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = 50
position = Vector2(-155, -226)
tile_map_data = PackedByteArray("AAAKACcAAAAAAAAAAAAKACgAAAAAAAAAAAAKACkAAAAAAAAAAAAKACoAAAAAAAAAAAAKACsAAAAAAAAAAAALACcAAAAAAAAAAAALACgAAAAAAAAAAAALACkAAAAAAAAAAAALACoAAAAAAAAAAAALACsAAAAAAAAAAAAMACcAAAAAAAAAAAAMACgAAAAAAAAAAAAMACkAAAAAAAAAAAAMACoAAAAAAAAAAAAMACsAAAAAAAAAAAANACcAAAAAAAAAAAANACgAAAAAAAAAAAANACkAAAAAAAAAAAANACoAAAAAAAAAAAANACsAAAAAAAAAAAAOACcAAAAAAAAAAAAOACgAAAAAAAAAAAAOACkAAAAAAAAAAAAOACoAAAAAAAAAAAAOACsAAAAAAAAAAAAPACcAAAAAAAAAAAAPACgAAAAAAAAAAAAPACkAAAAAAAAAAAAPACoAAAAAAAAAAAAPACsAAAAAAAAAAAAQACcAAAAAAAAAAAAQACgAAAAAAAAAAAAQACkAAAAAAAAAAAAQACoAAAAAAAAAAAAQACsAAAAAAAAAAAARACcAAAAAAAAAAAARACgAAAAAAAAAAAARACkAAAAAAAAAAAARACoAAAAAAAAAAAARACsAAAAAAAAAAAASACcAAAAAAAAAAAASACgAAAAAAAAAAAASACkAAAAAAAAAAAASACoAAAAAAAAAAAASACsAAAAAAAAAAAATACcAAAAAAAAAAAATACgAAAAAAAAAAAATACkAAAAAAAAAAAATACoAAAAAAAAAAAATACsAAAAAAAAAAAAUACcAAAAAAAAAAAAUACgAAAAAAAAAAAAUACkAAAAAAAAAAAAUACoAAAAAAAAAAAAUACsAAAAAAAAAAAAVACcAAAAAAAAAAAAVACgAAAAAAAAAAAAVACkAAAAAAAAAAAAVACoAAAAAAAAAAAAVACsAAAAAAAAAAAAWACcAAAAAAAAAAAAWACgAAAAAAAAAAAAWACkAAAAAAAAAAAAWACoAAAAAAAAAAAAWACsAAAAAAAAAAAAXACcAAAAAAAAAAAAXACgAAAAAAAAAAAAXACkAAAAAAAAAAAAXACoAAAAAAAAAAAAXACsAAAAAAAAAAAAdACIAAAAAAAAAAAAdACMAAAAAAAAAAAAdACQAAAAAAAAAAAAdACUAAAAAAAAAAAAdACYAAAAAAAAAAAAdACcAAAAAAAAAAAAdACgAAAAAAAAAAAAdACkAAAAAAAAAAAAdACoAAAAAAAAAAAAdACsAAAAAAAAAAAAeACIAAAAAAAAAAAAeACMAAAAAAAAAAAAeACQAAAAAAAAAAAAeACUAAAAAAAAAAAAeACYAAAAAAAAAAAAeACcAAAAAAAAAAAAeACgAAAAAAAAAAAAeACkAAAAAAAAAAAAeACoAAAAAAAAAAAAeACsAAAAAAAAAAAAfACIAAAAAAAAAAAAfACMAAAAAAAAAAAAfACQAAAAAAAAAAAAfACUAAAAAAAAAAAAfACYAAAAAAAAAAAAfACcAAAAAAAAAAAAfACgAAAAAAAAAAAAfACkAAAAAAAAAAAAfACoAAAAAAAAAAAAfACsAAAAAAAAAAAAgACIAAAAAAAAAAAAgACMAAAAAAAAAAAAgACQAAAAAAAAAAAAgACUAAAAAAAAAAAAgACYAAAAAAAAAAAAgACcAAAAAAAAAAAAgACgAAAAAAAAAAAAgACkAAAAAAAAAAAAgACoAAAAAAAAAAAAgACsAAAAAAAAAAAAgAB8AAAAAAAAAAAAgACAAAAAAAAAAAAAgACEAAAAAAAAAAAAhAB8AAAAAAAAAAAAhACAAAAAAAAAAAAAhACEAAAAAAAAAAAAhACIAAAAAAAAAAAAhACMAAAAAAAAAAAAhACQAAAAAAAAAAAAiAB8AAAAAAAAAAAAiACAAAAAAAAAAAAAiACEAAAAAAAAAAAAiACIAAAAAAAAAAAAiACMAAAAAAAAAAAAiACQAAAAAAAAAAAAjAB8AAAAAAAAAAAAjACAAAAAAAAAAAAAjACEAAAAAAAAAAAAjACIAAAAAAAAAAAAjACMAAAAAAAAAAAAjACQAAAAAAAAAAAAkAB8AAAAAAAAAAAAkACAAAAAAAAAAAAAkACEAAAAAAAAAAAAkACIAAAAAAAAAAAAkACMAAAAAAAAAAAAkACQAAAAAAAAAAAAlAB8AAAAAAAAAAAAlACAAAAAAAAAAAAAlACEAAAAAAAAAAAAlACIAAAAAAAAAAAAlACMAAAAAAAAAAAAlACQAAAAAAAAAAAAmAB8AAAAAAAAAAAAmACAAAAAAAAAAAAAmACEAAAAAAAAAAAAmACIAAAAAAAAAAAAmACMAAAAAAAAAAAAmACQAAAAAAAAAAAAnAB8AAAAAAAAAAAAnACAAAAAAAAAAAAAnACEAAAAAAAAAAAAnACIAAAAAAAAAAAAnACMAAAAAAAAAAAAnACQAAAAAAAAAAAAhACUAAAAAAAAAAAAhACYAAAAAAAAAAAAhACcAAAAAAAAAAAAhACgAAAAAAAAAAAAhACkAAAAAAAAAAAAhACoAAAAAAAAAAAAhACsAAAAAAAAAAAAiACUAAAAAAAAAAAAiACYAAAAAAAAAAAAiACcAAAAAAAAAAAAiACgAAAAAAAAAAAAiACkAAAAAAAAAAAAiACoAAAAAAAAAAAAiACsAAAAAAAAAAAAjACUAAAAAAAAAAAAjACYAAAAAAAAAAAAjACcAAAAAAAAAAAAjACgAAAAAAAAAAAAjACkAAAAAAAAAAAAjACoAAAAAAAAAAAAjACsAAAAAAAAAAAAkACUAAAAAAAAAAAAkACYAAAAAAAAAAAAkACcAAAAAAAAAAAAkACgAAAAAAAAAAAAkACkAAAAAAAAAAAAkACoAAAAAAAAAAAAkACsAAAAAAAAAAAAlACUAAAAAAAAAAAAlACYAAAAAAAAAAAAlACcAAAAAAAAAAAAlACgAAAAAAAAAAAAlACkAAAAAAAAAAAAlACoAAAAAAAAAAAAlACsAAAAAAAAAAAAmACUAAAAAAAAAAAAmACYAAAAAAAAAAAAmACcAAAAAAAAAAAAmACgAAAAAAAAAAAAmACkAAAAAAAAAAAAmACoAAAAAAAAAAAAmACsAAAAAAAAAAAAnACUAAAAAAAAAAAAnACYAAAAAAAAAAAAnACcAAAAAAAAAAAAnACgAAAAAAAAAAAAnACkAAAAAAAAAAAAnACoAAAAAAAAAAAAnACsAAAAAAAAAAAB3AB8AAAAAAAAAAAB3ACAAAAAAAAAAAAB4AB8AAAAAAAAAAAB4ACAAAAAAAAAAAAB4ACEAAAAAAAAAAAB5AB8AAAAAAAAAAAB5ACAAAAAAAAAAAAB5ACEAAAAAAAAAAAB6AB8AAAAAAAAAAAB6ACAAAAAAAAAAAAAbACQAAQAEAAEAAAAbACUAAQAEAAMAAAAfACEAAQADAAEAAAA2AB8AAQADAAEAAAA3AB8AAQADAAEAAAA4AB8AAQAEAAEAAAA8AB8AAQADAAEAAAA9AB8AAQADAAEAAABAAB8AAQACAAEAAABBAB8AAQADAAEAAABCAB8AAQADAAEAAABPABcAAQADAAIAAABQABcAAQADAAIAAABRABcAAQADAAIAAABkABkAAQADAAIAAAAaACQAAQACAAEAAAAaACUAAQACAAMAAAA1AB8AAAAAAAAAAAA7AB8AAQACAAEAAAA+AB8AAQAEAAEAAABDAB8AAQADAAEAAABEAB8AAQAEAAEAAAAuAB8AAAAAAAAAAAAuACAAAAAAAAAAAAAuACEAAAAAAAAAAAAuACIAAAAAAAAAAAAuACMAAAAAAAAAAAAuACQAAAAAAAAAAAAuACUAAAAAAAAAAAAuACYAAAAAAAAAAAAuACcAAAAAAAAAAAAuACgAAAAAAAAAAAAuACkAAAAAAAAAAAAuACoAAAAAAAAAAAAuACsAAAAAAAAAAAAvAB8AAAAAAAAAAAAvACAAAAAAAAAAAAAvACEAAAAAAAAAAAAvACIAAAAAAAAAAAAvACMAAAAAAAAAAAAvACQAAAAAAAAAAAAvACUAAAAAAAAAAAAvACYAAAAAAAAAAAAvACcAAAAAAAAAAAAvACgAAAAAAAAAAAAvACkAAAAAAAAAAAAvACoAAAAAAAAAAAAvACsAAAAAAAAAAAAwAB8AAAAAAAAAAAAwACAAAAAAAAAAAAAwACEAAAAAAAAAAAAwACIAAAAAAAAAAAAwACMAAAAAAAAAAAAwACQAAAAAAAAAAAAwACUAAAAAAAAAAAAwACYAAAAAAAAAAAAwACcAAAAAAAAAAAAwACgAAAAAAAAAAAAwACkAAAAAAAAAAAAwACoAAAAAAAAAAAAwACsAAAAAAAAAAAAxAB8AAAAAAAAAAAAxACAAAAAAAAAAAAAxACEAAAAAAAAAAAAxACIAAAAAAAAAAAAxACMAAAAAAAAAAAAxACQAAAAAAAAAAAAxACUAAAAAAAAAAAAxACYAAAAAAAAAAAAxACcAAAAAAAAAAAAxACgAAAAAAAAAAAAxACkAAAAAAAAAAAAxACoAAAAAAAAAAAAxACsAAAAAAAAAAAAyAB8AAAAAAAAAAAAyACAAAAAAAAAAAAAyACEAAAAAAAAAAAAyACIAAAAAAAAAAAAyACMAAAAAAAAAAAAyACQAAAAAAAAAAAAyACUAAAAAAAAAAAAyACYAAAAAAAAAAAAyACcAAAAAAAAAAAAyACgAAAAAAAAAAAAyACkAAAAAAAAAAAAyACoAAAAAAAAAAAAyACsAAAAAAAAAAAAzAB8AAAAAAAAAAAAzACAAAAAAAAAAAAAzACEAAAAAAAAAAAAzACIAAAAAAAAAAAAzACMAAAAAAAAAAAAzACQAAAAAAAAAAAAzACUAAAAAAAAAAAAzACYAAAAAAAAAAAAzACcAAAAAAAAAAAAzACgAAAAAAAAAAAAzACkAAAAAAAAAAAAzACoAAAAAAAAAAAAzACsAAAAAAAAAAAA0AB8AAAAAAAAAAAA0ACAAAAAAAAAAAAA0ACEAAAAAAAAAAAA0ACIAAAAAAAAAAAA0ACMAAAAAAAAAAAA0ACQAAAAAAAAAAAA0ACUAAAAAAAAAAAA0ACYAAAAAAAAAAAA0ACcAAAAAAAAAAAA0ACgAAAAAAAAAAAA0ACkAAAAAAAAAAAA0ACoAAAAAAAAAAAA0ACsAAAAAAAAAAAA1ACAAAAAAAAAAAAA1ACEAAAAAAAAAAAA1ACIAAAAAAAAAAAA1ACMAAAAAAAAAAAA1ACQAAAAAAAAAAAA1ACUAAAAAAAAAAAA1ACYAAAAAAAAAAAA1ACcAAAAAAAAAAAA1ACgAAAAAAAAAAAA1ACkAAAAAAAAAAAA1ACoAAAAAAAAAAAA1ACsAAAAAAAAAAAAqAB8AAQADAAEAAAArAB8AAQADAAEAAAAzABQAAAAAAAAAAAAzABUAAAAAAAAAAAAzABYAAAAAAAAAAAA0ABQAAAAAAAAAAAA0ABUAAAAAAAAAAAA0ABYAAAAAAAAAAAA1ABQAAAAAAAAAAAA1ABUAAAAAAAAAAAA1ABYAAAAAAAAAAAA2ABQAAAAAAAAAAAA2ABUAAAAAAAAAAAA2ABYAAAAAAAAAAAA3ABQAAAAAAAAAAAA3ABUAAAAAAAAAAAA3ABYAAAAAAAAAAAA4ABQAAAAAAAAAAAA4ABUAAAAAAAAAAAA4ABYAAAAAAAAAAAA5ABQAAAAAAAAAAAA5ABUAAAAAAAAAAAA5ABYAAAAAAAAAAAA6ABQAAAAAAAAAAAA6ABUAAAAAAAAAAAA6ABYAAAAAAAAAAAA7ABQAAAAAAAAAAAA7ABUAAAAAAAAAAAA7ABYAAAAAAAAAAAA8ABQAAAAAAAAAAAA8ABUAAAAAAAAAAAA8ABYAAAAAAAAAAABGABMAAAAAAAAAAABGABQAAAAAAAAAAABHABMAAAAAAAAAAABHABQAAAAAAAAAAABIABMAAAAAAAAAAABIABQAAAAAAAAAAABJABMAAAAAAAAAAABJABQAAAAAAAAAAABKABMAAAAAAAAAAABKABQAAAAAAAAAAABLABMAAAAAAAAAAABLABQAAAAAAAAAAABMABMAAAAAAAAAAABMABQAAAAAAAAAAABNABMAAAAAAAAAAABNABQAAAAAAAAAAABOABMAAAAAAAAAAABOABQAAAAAAAAAAABXABIAAAAAAAAAAABXABMAAAAAAAAAAABYABIAAAAAAAAAAABYABMAAAAAAAAAAABZABIAAAAAAAAAAABZABMAAAAAAAAAAABaABIAAAAAAAAAAABaABMAAAAAAAAAAABiABMAAAAAAAAAAABiABQAAAAAAAAAAABjABMAAAAAAAAAAABjABQAAAAAAAAAAABkABMAAAAAAAAAAABkABQAAAAAAAAAAABpABoAAAAAAAAAAABpABsAAAAAAAAAAABpABwAAAAAAAAAAABpAB0AAAAAAAAAAABpAB4AAAAAAAAAAABpAB8AAAAAAAAAAABpACAAAAAAAAAAAABpACEAAAAAAAAAAABpACIAAAAAAAAAAABpACMAAAAAAAAAAABpACQAAAAAAAAAAABpACUAAAAAAAAAAABqABoAAAAAAAAAAABqABsAAAAAAAAAAABqABwAAAAAAAAAAABqAB0AAAAAAAAAAABqAB4AAAAAAAAAAABqAB8AAAAAAAAAAABqACAAAAAAAAAAAABqACEAAAAAAAAAAABqACIAAAAAAAAAAABqACMAAAAAAAAAAABqACQAAAAAAAAAAABqACUAAAAAAAAAAABrABoAAAAAAAAAAABrABsAAAAAAAAAAABrABwAAAAAAAAAAABrAB0AAAAAAAAAAABrAB4AAAAAAAAAAABrAB8AAAAAAAAAAABrACAAAAAAAAAAAABrACEAAAAAAAAAAABrACIAAAAAAAAAAABrACMAAAAAAAAAAABrACQAAAAAAAAAAABrACUAAAAAAAAAAABsABoAAAAAAAAAAABsABsAAAAAAAAAAABsABwAAAAAAAAAAABsAB0AAAAAAAAAAABsAB4AAAAAAAAAAABsAB8AAAAAAAAAAABsACAAAAAAAAAAAABsACEAAAAAAAAAAABsACIAAAAAAAAAAABsACMAAAAAAAAAAABsACQAAAAAAAAAAABsACUAAAAAAAAAAABtABoAAAAAAAAAAABtABsAAAAAAAAAAABtABwAAAAAAAAAAABtAB0AAAAAAAAAAABtAB4AAAAAAAAAAABtAB8AAAAAAAAAAABtACAAAAAAAAAAAABtACEAAAAAAAAAAABtACIAAAAAAAAAAABtACMAAAAAAAAAAABtACQAAAAAAAAAAABtACUAAAAAAAAAAABuABoAAAAAAAAAAABuABsAAAAAAAAAAABuABwAAAAAAAAAAABuAB0AAAAAAAAAAABuAB4AAAAAAAAAAABuAB8AAAAAAAAAAABuACAAAAAAAAAAAABuACEAAAAAAAAAAABuACIAAAAAAAAAAABuACMAAAAAAAAAAABuACQAAAAAAAAAAABuACUAAAAAAAAAAABvABoAAAAAAAAAAABvABsAAAAAAAAAAABvABwAAAAAAAAAAABvAB0AAAAAAAAAAABvAB4AAAAAAAAAAABvAB8AAAAAAAAAAABvACAAAAAAAAAAAABvACEAAAAAAAAAAABvACIAAAAAAAAAAABvACMAAAAAAAAAAABvACQAAAAAAAAAAABvACUAAAAAAAAAAABwABoAAAAAAAAAAABwABsAAAAAAAAAAABwABwAAAAAAAAAAABwAB0AAAAAAAAAAABwAB4AAAAAAAAAAABwAB8AAAAAAAAAAABwACAAAAAAAAAAAABwACEAAAAAAAAAAABwACIAAAAAAAAAAABwACMAAAAAAAAAAABwACQAAAAAAAAAAABwACUAAAAAAAAAAABpACYAAAAAAAAAAABpACcAAAAAAAAAAABpACgAAAAAAAAAAABpACkAAAAAAAAAAABqACYAAAAAAAAAAABqACcAAAAAAAAAAABqACgAAAAAAAAAAABqACkAAAAAAAAAAABrACYAAAAAAAAAAABrACcAAAAAAAAAAABrACgAAAAAAAAAAABrACkAAAAAAAAAAABsACYAAAAAAAAAAABsACcAAAAAAAAAAABsACgAAAAAAAAAAABsACkAAAAAAAAAAABtACYAAAAAAAAAAABtACcAAAAAAAAAAABtACgAAAAAAAAAAABtACkAAAAAAAAAAABuACYAAAAAAAAAAABuACcAAAAAAAAAAABuACgAAAAAAAAAAABuACkAAAAAAAAAAABvACYAAAAAAAAAAABvACcAAAAAAAAAAABvACgAAAAAAAAAAABvACkAAAAAAAAAAABwACYAAAAAAAAAAABwACcAAAAAAAAAAABwACgAAAAAAAAAAABwACkAAAAAAAAAAABzAB0AAQADAAIAAAB0AB0AAQADAAIAAAB1AB0AAQADAAIAAAA9ABoAAQADAAEAAAA+ABoAAQADAAEAAAA/ABoAAQADAAEAAABFABsAAQADAAEAAABGABsAAQADAAEAAABHABsAAQADAAEAAABBABcAAQADAAEAAAA8ABoAAQADAAEAAABDABQAAQADAAEAAABEABQAAQADAAEAAAA+ABQAAQADAAEAAABdABQAAQADAAIAAABdABUAAQADAAIAAABgABMAAQADAAEAAABgABQAAQADAAIAAABgABUAAQADAAIAAABgABYAAQADAAIAAABdABMAAQADAAEAAAA=")
tile_set = SubResource("TileSet_pkg7o")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = 0.022
anchor_top = 0.085
anchor_right = 0.022
anchor_bottom = 0.085
offset_left = -0.0800009
offset_top = -28.8
offset_right = 115.92
offset_bottom = 0.200001
theme_override_fonts/font = ExtResource("4_aqk2v")
text = "Score: 0"
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="All coins" type="Node2D" parent="."]

[node name="Coin" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(116, 388)

[node name="Coin2" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(137, 388)

[node name="Coin3" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(158, 388)

[node name="Coin4" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(179, 388)

[node name="Coin5" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(278, 339)

[node name="Coin6" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(346, 291)

[node name="Coin7" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(386, 260)

[node name="Coin8" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(409, 259)

[node name="Coin9" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(431, 259)

[node name="Coin10" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(452, 259)

[node name="Coin11" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(473, 259)

[node name="Coin12" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(532, 256)

[node name="Coin13" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(892, 126)

[node name="Coin14" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(572, 215)

[node name="Coin15" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(629, 253)

[node name="Coin16" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(775, 248)

[node name="Coin17" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(865, 246)

[node name="Coin18" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(914, 217)

[node name="Coin19" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(971, 193)

[node name="Coin20" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(825, 178)

[node name="Coin21" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(933, 78)

[node name="Coin22" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(1086, 60)

[node name="Coin23" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(1014, 61)

[node name="Coin24" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(693, 75)

[node name="Coin25" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(780, 78)

[node name="Coin26" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(844, 65)

[node name="Coin27" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(1132, 128)

[node name="Coin28" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(1253, 47)

[node name="Coin29" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(1341, 65)

[node name="Coin30" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(1388, 63)

[node name="Coin31" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(1437, 64)

[node name="Coin32" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(1449, 159)

[node name="Coin33" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(1574, 169)

[node name="Coin34" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(1625, 170)

[node name="Coin35" parent="All coins" instance=ExtResource("6_dwbse")]
position = Vector2(1708, 220)

[node name="Finish" parent="." instance=ExtResource("7_pkg7o")]
position = Vector2(1780, 253)

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_gbfbk")
volume_db = -0.996
pitch_scale = 0.51

[node name="CoinEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ioo17")
pitch_scale = 4.0
max_distance = 2020.0
attenuation = 1.41421

[connection signal="coined" from="Player" to="." method="_on_player_coined"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="finish" from="Finish" to="." method="_on_finish_finish"]
